--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "react-scripts": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "spotify-web-api-node": "^5.0.2"
