--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,7 +1,4 @@
 [build]
+  command = "npm run build"
   functions = "functions"
   publish = "build"
-
-[dev]
-  functions = "functions"
-  targetPort = 3000
