--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,9 +1,5 @@
 [build]
-  command = "cd client && npm run build"
+  base = "/"
+  command = "cd client && npm install && npm run build"
   publish = "client/build"
   functions = "functions"
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
