--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
 [build]
   publish = "build"
-  functions = "functions"
+  functions = "netlify/functions"
+
+[build.environment]
+  NODE_VERSION = "18"
