--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "plotly.js": "^3.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-plotly.js": "^2.6.0",
     "react-scripts": "5.0.1",
     "spotify-web-api-node": "^5.0.2",
     "web-vitals": "^2.1.4"
